k8s/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
    - name: http
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:10.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
          resources:
            limits:
              memory: 1G
              cpu: 1000m
            requests:
              memory: 1G
              cpu: 1000m
          readinessProbe:
            exec:
              command: ["psql", "-w", "-U", "quarkus_test", "-d", "quarkus_test", "-c", "SELECT 1"]
            initialDelaySeconds: 15
            timeoutSeconds: 2
          livenessProbe:
            exec:
              command: ["psql", "-w", "-U", "quarkus_test", "-d", "quarkus_test", "-c", "SELECT 1"]
            initialDelaySeconds: 45
            timeoutSeconds: 2
