k8s/department.yaml
apiVersion: v1
kind: Service
metadata:
  name: department
  annotations:
    prometheus.io/should_be_scraped: "true"
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: department
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department
spec:
  replicas: 1
  selector:
    matchLabels:
      app: department
  template:
    metadata:
      labels:
        app: department
      annotations:
        prometheus.io/should_be_scraped: "true"
        prometheus.io/metric_path: "/metrics"
        prometheus.io/scrape_port: "8080"
        prometheus.io/scrape_scheme: "http"
    spec:
      containers:
        - name: department
          #image: serrodcal/department:1.0.1
          image: serrodcal/department-native:1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 350M
              cpu: 350m
            limits:
              memory: 350M
              cpu: 350m
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 4
            periodSeconds: 15
