k8s/employee.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee
  annotations:
    prometheus.io/should_be_scraped: "true"
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: employee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
      annotations:
        prometheus.io/should_be_scraped: "true"
        prometheus.io/metric_path: "/metrics"
        prometheus.io/scrape_port: "8080"
        prometheus.io/scrape_scheme: "http"
    spec:
      containers:
        - name: employee
          image: serrodcal/employees-quarkus-prometheus-jvm:1.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 1G
              cpu: 1000m
            requests:
              memory: 1G
              cpu: 1000m
