k8s/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: nginx:1.17.10-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 1G
              cpu: 1000m
            requests:
              memory: 1G
              cpu: 1000m
          volumeMounts:
          - name: gateway-config
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
          # statics folder: /usr/share/nginx/html
      volumes:
      - name: gateway-config
        configMap:
          name: gateway-cm
          items:
            - key: nginx.conf
              path: nginx.conf
